# ML_HW1

./: Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
models/: model.pickle
notebooks/: EDA.ipynb
