[project]
name = "ml-hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.8",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "streamlit>=1.52.2",
    "sympy>=1.14.0",
    "ydata-profiling>=4.18.0",
]
